--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,18 @@
             <scope>test</scope>
         </dependency>   
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.10.0</version>
+            <scope>test</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.14.1</version>
-        </dependency>
-
+        </dependency>        
     </dependencies>
 
     <build>
